--- a/apps/nextjs/src/styles/syntax-higlighting.css
+++ b/apps/nextjs/src/styles/syntax-higlighting.css
@@ -310,7 +310,24 @@ pre.shiki.logger.log-log svg {
 	margin-left: 6px;
 	margin-right: 9px;
 }
-/*********************************************************
-* Line highlighting
-*/
-
+.popover{
+	background-color: #333333;
+    border: 1px solid #b3b3b3;
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px 0 rgb(0 0 0 / 20%);
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 0 0.5rem 0.3rem;
+}
+.shiki .arrow{
+	background-color: #333333;
+    position: relative;
+    top: -7px;
+    margin-left: 0.1rem;
+    border-left: 1px solid #b3b3b3;
+    border-top: 1px solid #b3b3b3;
+    transform: translateY(25%) rotate(45deg);
+    height: 8px;
+    width: 8px;
+}
