feat: nextjs - added go to top component for blog posts bage - scroll smoth hhh

--- a/apps/nextjs/src/styles/globals.css
+++ b/apps/nextjs/src/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
 .embed-youtube {
     position: relative;
     padding-bottom: 56.25%; /* 16:9 */
