--- a/apps/nextjs/src/styles/syntax-higlighting.css
+++ b/apps/nextjs/src/styles/syntax-higlighting.css
@@ -11,58 +11,58 @@ Code blocks structurally look like:
   </pre> 
 */
 
-pre.shiki{
-	/* In theory shiki will overwrite these, but this is to make sure there are defaults regardless */
-	 background-color: white;
-	 color: black;
-	/* Give it some space to breathe */
-	 padding: 12px;
-	 margin-bottom: 3rem;
+pre.shiki {
+    /* In theory shiki will overwrite these, but this is to make sure there are defaults regardless */
+    background-color: white;
+    color: black;
+    /* Give it some space to breathe */
+    padding: 12px;
+    margin-bottom: 3rem;
     /* Important to allow the code to move horizontally; */
     overflow-x: auto;
     position: relative;
 }
 
- pre.shiki {
+pre.shiki {
     overflow-x: auto;
 }
- pre.shiki:hover .dim {
-	 opacity: 1;
+pre.shiki:hover .dim {
+    opacity: 1;
 }
- pre.shiki div.dim {
-	 opacity: 0.5;
+pre.shiki div.dim {
+    opacity: 0.5;
 }
- pre.shiki div.dim, pre.shiki div.highlight {
-	 margin: 0;
-	 padding: 0;
+pre.shiki div.dim,
+pre.shiki div.highlight {
+    margin: 0;
+    padding: 0;
 }
- pre.shiki div.highlight {
-	 opacity: 1;
-	 background-color: #f1f8ff;
+pre.shiki div.highlight {
+    opacity: 1;
+    background-color: #f1f8ff;
 }
- pre.shiki div.line {
-	 min-height: 1rem;
-	 
-}
-.line.highlight{
-	background: #f7ebc6;
-	box-shadow: inset 5px 0 0 #f7d87c;
-	z-index: 0;
+pre.shiki div.line {
+    min-height: 1rem;
+    position: relative;
 }
 .line.highlight {
-	display: inline; /* 1 */
-	min-width: 99%; /* 2 */
-
-  }
+    background: #f7ebc6;
+    box-shadow: inset 5px 0 0 #f7d87c;
+    z-index: 0;
+}
+.line.highlight {
+    display: inline; /* 1 */
+    min-width: 99%; /* 2 */
+}
 
 /** Don't show the language identifiers */
-pre.shiki .language-id{
+pre.shiki .language-id {
     display: none;
 }
 
 /* Visually differentiates twoslash code samples  */
- pre.twoslash {
-	 border-color: #719af4;
+pre.twoslash {
+    border-color: #719af4;
 }
 
 /** When you mouse over the pre, show the underlines */
@@ -74,244 +74,252 @@ pre.twoslash:hover data-lsp {
 pre.twoslash data-lsp:hover::before {
     content: attr(lsp);
     position: absolute;
-    transform: translate(0, 1rem);
+
+    transform: translate(-2.5rem, 1rem);
     background-color: #3f3f3f;
     color: #fff;
     text-align: left;
     padding: 5px 8px;
     border-radius: 2px;
-    font-family: "JetBrains Mono", Menlo, Monaco, Consolas, Courier New, monospace;
+    font-family: "JetBrains Mono", Menlo, Monaco, Consolas, Courier New,
+        monospace;
     font-size: 14px;
     white-space: pre-wrap;
     z-index: 100;
 }
 
-pre.shiki.code-container {
-	 overflow: auto;
+pre.shiki .code-container {
+    overflow: auto;
 }
 /* The try button */
- pre.shiki.code-container > a {
-	 position: absolute;
-	 right: 8px;
-	 bottom: 8px;
-	 border-radius: 4px;
-	 border: 1px solid #719af4;
-	 padding: 0 8px;
-	 color: #719af4;
-	 text-decoration: none;
-	 opacity: 0;
-	 transition-timing-function: ease;
-	 transition: opacity 0.3s;
+pre.shiki .code-container > a {
+    position: absolute;
+    right: 8px;
+    bottom: 8px;
+    border-radius: 4px;
+    border: 1px solid #719af4;
+    padding: 0 8px;
+    color: #719af4;
+    text-decoration: none;
+    opacity: 0;
+    transition-timing-function: ease;
+    transition: opacity 0.3s;
 }
 /* Respect no animations */
 @media (prefers-reduced-motion: reduce) {
-	 pre.shiki.code-container > a {
-		 transition: none;
-	}
+    pre.shiki.code-container > a {
+        transition: none;
+    }
 }
- pre.shiki.code-container > a:hover {
-	 color: white;
-	 background-color: #719af4;
+pre.shiki .code-container > a:hover {
+    color: white;
+    background-color: #719af4;
 }
- pre.shiki.code-container:hover a {
-	 opacity: 1;
+pre.shiki .code-container:hover a {
+    opacity: 1;
 }
 
- pre.shikicode {
-	 font-size: 15px;
-	 font-family: "JetBrains Mono", Menlo, Monaco, Consolas, Courier New, monospace;;
-	 white-space: pre;
-	 -webkit-overflow-scrolling: touch;
+pre.shikicode {
+    font-size: 15px;
+    font-family: "JetBrains Mono", Menlo, Monaco, Consolas, Courier New,
+        monospace;
+    white-space: pre;
+    -webkit-overflow-scrolling: touch;
 }
- pre.shikicode a {
-	 text-decoration: none;
+pre.shikicode a {
+    text-decoration: none;
 }
- pre.shikidata-err {
+pre.shikidata-err {
     /* Extracted from VS Code */
-	 background: url("data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%206%203'%20enable-background%3D'new%200%200%206%203'%20height%3D'3'%20width%3D'6'%3E%3Cg%20fill%3D'%23c94824'%3E%3Cpolygon%20points%3D'5.5%2C0%202.5%2C3%201.1%2C3%204.1%2C0'%2F%3E%3Cpolygon%20points%3D'4%2C0%206%2C2%206%2C0.6%205.4%2C0'%2F%3E%3Cpolygon%20points%3D'0%2C2%201%2C3%202.4%2C3%200%2C0.6'%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E") repeat-x bottom left;
-	 padding-bottom: 3px;
+    background: url("data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%206%203'%20enable-background%3D'new%200%200%206%203'%20height%3D'3'%20width%3D'6'%3E%3Cg%20fill%3D'%23c94824'%3E%3Cpolygon%20points%3D'5.5%2C0%202.5%2C3%201.1%2C3%204.1%2C0'%2F%3E%3Cpolygon%20points%3D'4%2C0%206%2C2%206%2C0.6%205.4%2C0'%2F%3E%3Cpolygon%20points%3D'0%2C2%201%2C3%202.4%2C3%200%2C0.6'%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E")
+        repeat-x bottom left;
+    padding-bottom: 3px;
 }
- pre.shiki.query {
-	 margin-bottom: 10px;
-	 color: #137998;
-	 display: inline-block;
+pre.shiki .query {
+    margin-bottom: 10px;
+    color: #137998;
+    display: inline-block;
 }
 
-  /* In order to have the 'popped out' style design and to not break the layout
+/* In order to have the 'popped out' style design and to not break the layout
   /* we need to place a fake and un-selectable copy of the error which _isn't_ broken out
   /* behind the actual error message.
 
   /* This sections keeps both of those two in in sync  */
 
- pre.shiki.error, pre.shiki.error-behind {
-	 margin-left: -14px;
-	 margin-top: 8px;
-	 margin-bottom: 4px;
-	 padding: 6px;
-	 padding-left: 14px;
-	 width: calc(100% - 20px);
-	 white-space: pre-wrap;
-	 display: block;
+pre.shiki .error,
+pre.shiki .error-behind {
+    margin-left: -14px;
+    margin-top: 8px;
+    margin-bottom: 4px;
+    padding: 6px;
+    padding-left: 14px;
+    width: calc(100% - 20px);
+    white-space: pre-wrap;
+    display: block;
 }
- pre.shiki.error {
-	 position: absolute;
-	 background-color: #fee;
-	 border-left: 2px solid #bf1818;
-	/* Give the space to the error code */
-	 display: flex;
-	 align-items: center;
-	 color: black;
+pre.shiki .error {
+    position: absolute;
+    background-color: #f79ca0;
+    border-left: 8px solid #bf1818;
+    /* Give the space to the error code */
+    display: flex;
+    align-items: center;
+    color: black;
 }
- pre.shiki.error .code {
-	 display: none;
+pre.shiki .error .code {
+    display: none;
 }
- pre.shiki.error-behind {
-	 user-select: none;
-	 visibility: transparent;
-	 color: #fee;
+pre.shiki .error-behind {
+    user-select: none;
+    visibility: transparent;
+    color: #f79ca0;
 }
 /* Queries */
- pre.shiki.arrow {
-	/* Transparent background */
-	 background-color: #eee;
-	 position: relative;
-	 top: -7px;
-	 margin-left: 0.1rem;
-	/* Edges */
-	 border-left: 1px solid #eee;
-	 border-top: 1px solid #eee;
-	 transform: translateY(25%) rotate(45deg);
-	/* Size */
-	 height: 8px;
-	 width: 8px;
+pre.shiki .arrow {
+    /* Transparent background */
+    background-color: #eee;
+    position: relative;
+    top: -7px;
+    margin-left: 0.1rem;
+    /* Edges */
+    border-left: 1px solid #eee;
+    border-top: 1px solid #eee;
+    transform: translateY(25%) rotate(45deg);
+    /* Size */
+    height: 8px;
+    width: 8px;
 }
- pre.shiki.popover {
-	 margin-bottom: 10px;
-	 background-color: #eee;
-	 display: inline-block;
-	 padding: 0 0.5rem 0.3rem;
-	 margin-top: 10px;
-	 border-radius: 3px;
+pre.shiki .popover {
+    margin-bottom: 10px;
+    background-color: #eee;
+    display: inline-block;
+    padding: 0 0.5rem 0.3rem;
+    margin-top: 10px;
+    border-radius: 3px;
 }
 /* Completion */
- pre.shiki.inline-completions ul.dropdown {
-	 display: inline-block;
-	 position: absolute;
-	 width: 240px;
-	 background-color: gainsboro;
-	 color: grey;
-	 padding-top: 4px;
-	 font-family: var(--code-font);
-	 font-size: 0.8rem;
-	 margin: 0;
-	 padding: 0;
-	 border-left: 4px solid #4b9edd;
+pre.shiki.inline-completions ul.dropdown {
+    display: inline-block;
+    position: absolute;
+    width: 240px;
+    background-color: gainsboro;
+    color: grey;
+    padding-top: 4px;
+    font-family: var(--code-font);
+    font-size: 0.8rem;
+    margin: 0;
+    padding: 0;
+    border-left: 4px solid #4b9edd;
 }
- pre.shiki.inline-completions ul.dropdown::before {
-	 background-color: #4b9edd;
-	 width: 2px;
-	 position: absolute;
-	 top: -1.2rem;
-	 left: -3px;
-	 content: " ";
+pre.shiki.inline-completions ul.dropdown::before {
+    background-color: #4b9edd;
+    width: 2px;
+    position: absolute;
+    top: -1.2rem;
+    left: -3px;
+    content: " ";
 }
- pre.shiki.inline-completions ul.dropdown li {
-	 overflow-x: hidden;
-	 padding-left: 4px;
-	 margin-bottom: 4px;
+pre.shiki.inline-completions ul.dropdown li {
+    overflow-x: hidden;
+    padding-left: 4px;
+    margin-bottom: 4px;
 }
- pre.shiki.inline-completions ul.dropdown li.deprecated {
-	 text-decoration: line-through;
+pre.shiki.inline-completions ul.dropdown li.deprecated {
+    text-decoration: line-through;
 }
- pre.shiki.inline-completions ul.dropdown li span.result-found {
-	 color: #4b9edd;
+pre.shiki.inline-completions ul.dropdown li span.result-found {
+    color: #4b9edd;
 }
- pre.shiki.inline-completions ul.dropdown li span.result {
-	 width: 100px;
-	 color: black;
-	 display: inline-block;
+pre.shiki.inline-completions ul.dropdown li span.result {
+    width: 100px;
+    color: black;
+    display: inline-block;
 }
- .dark-theme .markdown pre.shiki{
-	 background-color: #d8d8d8;
-	 border-color: #ddd;
-	 filter: invert(98%) hue-rotate(180deg);
+.dark-theme .markdown pre.shiki {
+    background-color: #d8d8d8;
+    border-color: #ddd;
+    filter: invert(98%) hue-rotate(180deg);
 }
- data-lsp {
-	/* Ensures there's no 1px jump when the hover happens */
-	 border-bottom: 1px dotted transparent;
-	/* Fades in unobtrusively */
-	 transition-timing-function: ease;
-	 transition: border-color 0.3s;
+
+data-lsp {
+    /* Ensures there's no 1px jump when the hover happens */
+    border-bottom: 1px dotted transparent;
+    /* Fades in unobtrusively */
+    transition-timing-function: ease;
+    transition: border-color 0.3s;
 }
 /* Respect people's wishes to not have animations */
- @media (prefers-reduced-motion: reduce) {
-	 data-lsp {
-		 transition: none;
-	}
+@media (prefers-reduced-motion: reduce) {
+    data-lsp {
+        transition: none;
+    }
 }
 
 /** Annotations support, providing a tool for meta commentary */
 .tag-container {
-	position: relative;
+    position: relative;
 }
 .tag-container .twoslash-annotation {
-	position: absolute;
-	font-family: "JetBrains Mono", Menlo, Monaco, Consolas, Courier New, monospace;
-	right: -10px;
-   /** Default annotation text to 200px */
-	width: 200px;
-	color: #187abf;
-	background-color: #fcf3d9 bb;
+    position: absolute;
+    font-family: "JetBrains Mono", Menlo, Monaco, Consolas, Courier New,
+        monospace;
+    right: -10px;
+    /** Default annotation text to 200px */
+    width: 200px;
+    color: #187abf;
+    background-color: #fcf3d9 bb;
 }
 .tag-container .twoslash-annotation p {
-	text-align: left;
-	font-size: 0.8rem;
-	line-height: 0.9rem;
+    text-align: left;
+    font-size: 0.8rem;
+    line-height: 0.9rem;
 }
 .tag-container .twoslash-annotation svg {
-	float: left;
-	margin-left: -44px;
+    float: left;
+    margin-left: -44px;
 }
 .tag-container .twoslash-annotation.left {
-	right: auto;
-	left: -200px;
+    right: auto;
+    left: -200px;
 }
 .tag-container .twoslash-annotation.left svg {
-	float: right;
-	margin-right: -5px;
+    float: right;
+    margin-right: -5px;
 }
 
 /** Support for showing console log/warn/errors inline */
-pre.shiki.logger {
-	display: flex;
-	align-items: center;
-	color: black;
-	padding: 6px;
-	padding-left: 8px;
-	width: calc(100% - 19px);
-	white-space: pre-wrap;
+pre.shiki .logger {
+    display: flex;
+    align-items: center;
+    color: black;
+    padding: 6px;
+    padding-left: 8px;
+    width: calc(100% - 19px);
+    white-space: pre-wrap;
 }
 pre.shiki.logger svg {
-	margin-right: 9px;
+    margin-right: 9px;
 }
-pre.shiki.logger.error-log {
-	background-color: #fee;
-	border-left: 2px solid #bf1818;
+pre.shiki .logger.error-log {
+    background-color: #fee;
+    border-left: 2px solid #bf1818;
 }
-pre.shiki.logger.warn-log {
-	background-color: #ffe;
-	border-left: 2px solid #eae662;
+pre.shiki .logger.warn-log {
+    background-color: #ffe;
+    border-left: 2px solid #eae662;
 }
-pre.shiki.logger.log-log {
-	background-color: #e9e9e9;
-	border-left: 2px solid #ababab;
+pre.shiki .logger.log-log {
+    background-color: #e9e9e9;
+    border-left: 2px solid #ababab;
 }
-pre.shiki.logger.log-log svg {
-	margin-left: 6px;
-	margin-right: 9px;
+pre.shiki .logger.log-log svg {
+    margin-left: 6px;
+    margin-right: 9px;
 }
-.popover{
-	background-color: #333333;
+
+.popover {
+    background-color: #333333;
     border: 1px solid #b3b3b3;
     border-radius: 3px;
     box-shadow: 1px 1px 1px 0 rgb(0 0 0 / 20%);
@@ -320,8 +328,8 @@ pre.shiki.logger.log-log svg {
     margin-top: 10px;
     padding: 0 0.5rem 0.3rem;
 }
-.shiki .arrow{
-	background-color: #333333;
+.shiki .arrow {
+    background-color: #333333;
     position: relative;
     top: -7px;
     margin-left: 0.1rem;
